kustom-webapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
spec:
  replicas: 1
  template:
    spec: # Pod spec
      containers:
      - name: mycontainer
        image: "enzoyh/teste-repo:latest"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi" 
            cpu: "50m"    # 500milliCPUs (1/2 CPU)
          limits:
            memory: "128Mi"
            cpu: "100m"
