kustom-webapp/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
      - name: app-service
        image: enzoyh/teste-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # env:
        # - name: NODE_ENV
        #   value: "production"
        # - name: DATABASE_URL
        #   value: "postgres://user:password@db-host:5432/my-database"
#         resources:
#           requests:
#             memory: "16Mi" 
#             cpu: "50m"    # 500milliCPUs (1/2 CPU)
#           limits:
#             memory: "128Mi"
#             cpu: "100m"
