kustom-webapp/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: app-service
    container-name: tester
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
