kustom-webapp/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              name: app-service
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              name: app-service
resource.customizations: |
    extensions/Ingress:
        health.lua: |
          hs = {}
          hs.status = "Healthy"
          return hs
